[package]
name = "cb2"
version = "0.1.2"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"
description = "A task runner supporting nested sequences"
license = "MIT"

[dependencies]
cb2_core = { path = "../cb2_core", version = "0.1.0" }
env_logger = "0.6.0"
log = "0.4.6"
futures = "0.1.25"
tokio = "0.1.13"
tokio-process = "0.2.3"
ansi_term = "0.11.0"
chrono = "0.4.6"
crossbeam-channel = "0.3.6"
shared_child = "0.3.3"
