[package]
name = "cb2_core"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0.82"
serde_yaml = "0.8.8"
serde_json = "1.0.33"
from_file = "0.1.3"
from_file_derive = "0.1.3"
serde_derive = "1.0.82"
futures = "0.1.25"
tokio = "0.1.13"
tokio-process = "0.2.3"
uuid = { version = "0.7.1", features = ["v4"] }
