[package]
name = "cb2_core"
version = "0.1.0"
authors = ["Shane Osbourne <shane.osbourne8@gmail.com>"]
edition = "2018"
description = "The core for the cb2 command runner"
license = "MIT"

[dependencies]
serde = "1.0.82"
serde_yaml = "0.8.8"
serde_json = "1.0.33"
from_file = "0.1.3"
from_file_derive = "0.1.3"
serde_derive = "1.0.82"
futures = "0.1.25"
tokio = "0.1.13"
tokio-process = "0.2.3"
uuid = { version = "0.7.1", features = ["v4"] }
ansi_term = "0.11.0"
env_logger = "0.6.0"
log = "0.4.6"
clap = "2.32.0"